Crystal 8/ProgramF/SEAGAT~1/CRW/DEV/include/crpe.h


#define PE_UNCHANGED       -1
#define PE_SUBREPORT_NAME_LEN 128
#define PE_SRI_UNDEFINED     -1
#define PE_SRI_ONOPENJOB      0
#define PE_SRI_ONFUNCTIONCALL 1
typedef struct PESubreportInfo
{
    WORD StructSize;            
    char name [PE_SUBREPORT_NAME_LEN];
    short NLinks;
    short isOnDemand;    
    short external;         
    short reimportOption;   
}PESubreportInfo;
#define PE_SIZEOF_SUBREPORT_INFO (sizeof (PESubreportInfo))
BOOL CRPE_API PEGetSubreportInfo (short printJob,
                                  DWORD subreportHandle,
                                  PESubreportInfo FAR *subreportInfo);
BOOL CRPE_API PEReimportSubreport(short printJob,
                                  DWORD subreportHandle,
                                  BOOL FAR * linkChanged,
                                  BOOL FAR * reimported);
#define PE_WORD_LEN           2
#define PE_PF_REPORT_NAME_LEN 128
#define PE_PF_NAME_LEN        256
#define PE_PF_PROMPT_LEN      256
#define PE_PF_VALUE_LEN       256
#define PE_PF_EDITMASK_LEN    256
typedef struct PEParameterFieldInfo
{
    WORD StructSize;
    WORD ValueType;
    WORD DefaultValueSet;
    WORD CurrentValueSet;
    char Name [PE_PF_NAME_LEN];
    char Prompt [PE_PF_PROMPT_LEN];
    char DefaultValue [PE_PF_VALUE_LEN];
    char CurrentValue [PE_PF_VALUE_LEN];
    char ReportName [PE_PF_REPORT_NAME_LEN];
    WORD needsCurrentValue; 
    WORD isLimited;
    double MinSize;
    double MaxSize;
    char EditMask [PE_PF_EDITMASK_LEN];
    WORD isHidden;
}PEParameterFieldInfo;
#define PE_SIZEOF_PARAMETER_FIELD_INFO (sizeof (PEParameterFieldInfo))
short CRPE_API PEGetNParameterFields (short printJob);
BOOL CRPE_API PEGetNthParameterField (short printJob,
                                      short parameterN,
                                      PEParameterFieldInfo FAR *parameterInfo);
BOOL CRPE_API PESetNthParameterField (short printJob,
                                      short parameterN,
                                      PEParameterFieldInfo FAR *parameterInfo);
#define PE_VI_NUMBER       0
#define PE_VI_CURRENCY     1
#define PE_VI_BOOLEAN      2
#define PE_VI_DATE         3
#define PE_VI_STRING       4
#define PE_VI_DATETIME     5
#define PE_VI_TIME         6
#define PE_VI_INTEGER      7
#define PE_VI_COLOR        8
#define PE_VI_CHAR         9
#define PE_VI_LONG		   10
#define PE_VI_NOVALUE      100
#define PE_VI_STRING_LEN 256
typedef struct PEValueInfo
{
    WORD StructSize;
    WORD valueType; 
    double viNumber;
    double viCurrency;
    BOOL viBoolean;
    char viString[PE_VI_STRING_LEN];
    short viDate[3]; 
    short viDateTime[6]; 
    short viTime[3];  
    COLORREF viColor;
    short viInteger;
    char viC; 
	char ignored; 
	long viLong;
} PEValueInfo;
#define PE_SIZEOF_VALUE_INFO (sizeof (PEValueInfo))
BOOL CRPE_API PEConvertPFInfoToVInfo(void FAR * value, short valueType, PEValueInfo FAR * valueInfo);
BOOL CRPE_API PEConvertVInfoToPFInfo(PEValueInfo FAR * valueInfo, WORD FAR * valueType, void FAR * value);
short CRPE_API PEGetNParameterDefaultValues (short printJob, 
                                             const char FAR * parameterFieldName, 
                                             const char FAR * reportName);
BOOL  CRPE_API PEGetNthParameterDefaultValue (short printJob, 
                                              const char FAR * parameterFieldName, 
                                              const char FAR * reportName, 
                                              short index, 
                                              PEValueInfo FAR * valueInfo);
BOOL  CRPE_API PESetNthParameterDefaultValue (short printJob, 
                                              const char FAR * parameterFieldName, 
                                              const char FAR * reportName, 
                                              short index, PEValueInfo FAR * valueInfo);
BOOL  CRPE_API PEAddParameterDefaultValue (short printJob, 
                                           const char FAR * parameterFieldName, 
                                           const char FAR * reportName, 
                                           PEValueInfo FAR * valueInfo);
BOOL  CRPE_API PEDeleteNthParameterDefaultValue (short printJob, 
                                                 const char FAR * parameterFieldName, 
                                                 const char FAR * reportName, 
                                                 short index);
BOOL  CRPE_API PEGetParameterMinMaxValue (short printJob, 
                                          const char FAR * parameterFieldName,
                                          const char FAR * reportName,
                                          PEValueInfo FAR * valueMin, 
                                          PEValueInfo FAR * valueMax  
                                          );
BOOL  CRPE_API PESetParameterMinMaxValue (short printJob, 
                                          const char FAR * parameterFieldName,
                                          const char FAR * reportName,
                                          PEValueInfo FAR * valueMin, 
                                          PEValueInfo FAR * valueMax  
                                          );
BOOL CRPE_API PEGetNthParameterValueDescription (short printJob, const char FAR * parameterFieldName,
                                                 const char FAR * reportName, short index, HANDLE FAR * valueDesc,
                                                 short FAR *valueDescLength);
BOOL CRPE_API PESetNthParameterValueDescription (short printJob, const char FAR * parameterFieldName,
                                                 const char FAR * reportName, short index, char FAR * valueDesc);
#define PE_OR_NO_SORT                   0
#define PE_OR_ALPHANUMERIC_ASCENDING    1
#define PE_OR_ALPHANUMERIC_DESCENDING   2
#define PE_OR_NUMERIC_ASCENDING         3
#define PE_OR_NUMERIC_DESCENDING        4
typedef struct PEParameterPickListOption
{
    WORD  StructSize;       
    short showDescOnly;     
    short sortMethod;       
    short sortBasedOnDesc;  
} PEParameterPickListOption;
#define PE_SIZEOF_PICK_LIST_OPTION (sizeof (PEParameterPickListOption))
BOOL CRPE_API PEGetParameterPickListOption (short printJob, const char FAR * parameterFieldName,
                                            const char FAR * reportName, PEParameterPickListOption FAR * pickListOption);
BOOL CRPE_API PESetParameterPickListOption (short printJob, const char FAR * parameterFieldName,
                                            const char FAR * reportName, PEParameterPickListOption FAR * pickListOption);
#define PE_PO_REPORT         0
#define PE_PO_STOREDPROC     1
#define PE_PO_QUERY          2
#define PE_RI_INCLUDEUPPERBOUND 1
#define PE_RI_INCLUDELOWERBOUND 2
#define PE_RI_NOUPPERBOUND      4
#define PE_RI_NOLOWERBOUND      8
#define PE_DR_HASRANGE              0
#define PE_DR_HASDISCRETE           1
#define PE_DR_HASDISCRETEANDRANGE   2
typedef struct PEParameterValueInfo {
    WORD StructSize;
    short isNullable;               
    short disallowEditing;          
    short allowMultipleValues;      
    short hasDiscreteValues;        
    short partOfGroup;              
    short groupNum;                 
    short mutuallyExclusiveGroup;   
} PEParameterValueInfo;
#define PE_SIZEOF_PARAMETER_VALUE_INFO (sizeof (PEParameterValueInfo))
BOOL CRPE_API PEGetParameterValueInfo (short printJob, 
                                       const char FAR * parameterFieldName, 
                                       const char FAR * reportName, 
                                       PEParameterValueInfo FAR * valueInfo);
BOOL CRPE_API PESetParameterValueInfo (short printJob, 
                                       const char FAR * parameterFieldName,
                                       const char FAR * reportName, 
                                       PEParameterValueInfo FAR * valueInfo);
short CRPE_API PEGetNParameterCurrentValues (short printJob, 
                                                      const char FAR * parameterFieldName, 
                                                      const char FAR * reportName);
BOOL CRPE_API PEGetNthParameterCurrentValue (short printJob, 
                                             const char FAR * parameterFieldName,
                                             const char FAR * reportName,
                                             short index,
                                             PEValueInfo FAR * currentValue);
BOOL CRPE_API PEAddParameterCurrentValue (short printJob, 
                                          const char FAR * parameterFieldName,
                                          const char FAR * reportName, 
                                          PEValueInfo FAR * currentValue);
short CRPE_API PEGetNParameterCurrentRanges (short printJob, 
                                                      const char FAR * parameterFieldName, 
                                                      const char FAR * reportName);
BOOL CRPE_API PEGetNthParameterCurrentRange (short printJob, 
                                             const char FAR * parameterFieldName,
                                             const char FAR * reportName,
                                             short index,
                                             PEValueInfo FAR * rangeStart, 
                                             PEValueInfo FAR * rangeEnd,
											 short FAR * rangeInfo     
											);
BOOL CRPE_API PEAddParameterCurrentRange (short printJob, 
                                          const char FAR * parameterFieldName,
                                          const char FAR * reportName,
                                          PEValueInfo FAR * rangeStart, 
                                          PEValueInfo FAR * rangeEnd,
										  short rangeInfo     
										 );
short CRPE_API PEGetNthParameterType (short printJob, short index); 
BOOL  CRPE_API PEClearParameterCurrentValuesAndRanges (short printJob, 
                                                       const char FAR * parameterFieldName, 
                                                       const char FAR * reportName);
short CRPE_API PEGetNSortFields (short printJob);
BOOL CRPE_API PEGetNthSortField (short printJob,
                                 short sortFieldN,
                                 HANDLE FAR *nameHandle,
                                 short  FAR *nameLength,
                                 short  FAR *direction);
BOOL CRPE_API PESetNthSortField (short printJob,
                                 short sortFieldN,
                                 const char FAR *name, 
                                 short direction);  
BOOL CRPE_API PEDeleteNthSortField (short printJob,
                                    short sortFieldN);
short CRPE_API PEGetNGroupSortFields (short printJob);
BOOL CRPE_API PEGetNthGroupSortField (short printJob,
                                      short sortFieldN,
                                      HANDLE FAR *nameHandle,
                                      short  FAR *nameLength,
                                      short  FAR *direction); 
BOOL CRPE_API PESetNthGroupSortField (short printJob,
                                      short sortFieldN,
                                      const char FAR *name,
                                      short direction);
BOOL CRPE_API PEDeleteNthGroupSortField (short printJob,
                                         short sortFieldN);
#define PE_WORD_LEN          2