Crystal 8/ProgramF/SEAGAT~1/CRW/DEV/include/global32.bas


    ' Could be Number, Date, DateTime, Time, Boolean, or String
    DefaultValue As String * PE_PF_VALUE_LEN
    currentValue As String * PE_PF_VALUE_LEN

    'name of report where the field belongs, only used in PEGetNthParameterField
    reportName As String * PE_PF_REPORT_NAME_LEN

    'returns false (0) if parameter is linked, not in use, or has current value set
    needsCurrentValue As Integer
    
    'for String values this will be TRUE if the string is limited on length, for
    'other types it will be TRUE if the parameter is limited by a range
    isLimited As Integer

    ' For string fields, these are the minimum/maximum length of the string.
    ' For numeric fields, they are the minimum/maximum numeric value.
    ' For other fields, use PEGetParameterMinMaxValue
    MinSize As Double
    MaxSize As Double

    'An edit mask that restricts what may be entered for string parameters.
    EditMask As String * PE_PF_EDITMASK_LEN

    'return true if it is essbase sub var
    isHidden As Integer
    
End Type
    
Global Const PE_SIZEOF_VARINFO_TYPE = 5 * PE_WORD_LEN + PE_PF_NAME_LEN + PE_PF_PROMPT_LEN + 2 * PE_PF_VALUE_LEN + PE_PF_REPORT_NAME_LEN
Global Const PE_SIZEOF_PARAMETER_FIELD_INFO = 7 * PE_WORD_LEN + PE_PF_NAME_LEN + PE_PF_PROMPT_LEN + 2 * PE_PF_VALUE_LEN + PE_PF_REPORT_NAME_LEN + PE_PF_EDITMASK_LEN + 2 * PE_DOUBLE_LEN

Declare Function PEGetNParameterFields Lib "crpe32.dll" (ByVal printJob%) As Integer

Declare Function PEGetNthParameterField Lib "crpe32.dll" (ByVal printJob%, ByVal varN%, varInfo As PEParameterFieldInfo) As Integer

Declare Function PESetNthParameterField Lib "crpe32.dll" (ByVal printJob%, ByVal varN%, varInfo As PEParameterFieldInfo) As Integer

'*** Converting parameterInfo default value or current value into value info ****
Global Const PE_VI_STRING_LEN = 256

' define value type
Global Const PE_VI_NUMBER = 0
Global Const PE_VI_CURRENCY = 1
Global Const PE_VI_BOOLEAN = 2
Global Const PE_VI_DATE = 3
Global Const PE_VI_STRING = 4
Global Const PE_VI_DATETIME = 5
Global Const PE_VI_TIME = 6
Global Const PE_VI_INTEGER = 7
Global Const PE_VI_COLOR = 8
Global Const PE_VI_CHAR = 9
Global Const PE_VI_LONG = 10
Global Const PE_VI_NOVALUE = 100

Type PEValueInfo
    StructSize As Integer
    valueType As Integer  'a PE_VI_ constant
    viNumber As Double
    viCurrency As Double
    viBoolean As Long
    viString As String * PE_VI_STRING_LEN
    viDate(0 To 2) As Integer ' year, month, day
    viDateTime(0 To 5) As Integer ' year, month, day, hour, minute, second
    viTime(0 To 2) As Integer  ' hour, minute, second
    viColor As Long
    viInteger As Integer
    viC As Byte
    ignored As Byte 'for 4 byte alignment. ignored.
    viLong As Long
End Type

Global Const PE_SIZEOF_VALUE_INFO = 2 * PE_BYTE_LEN + _
                                   15 * PE_WORD_LEN + _
                                    3 * PE_LONG_LEN + _
                                    2 * PE_DOUBLE_LEN + _
                                    1 * PE_VI_STRING_LEN
                                     
Declare Function PEConvertPFInfoToVInfo Lib "crpe32.dll" (ByVal Value As Any, ByVal valueType%, valueInfo As PEValueInfo) As Integer
Declare Function PEConvertVInfoToPFInfo Lib "crpe32.dll" (valueInfo As PEValueInfo, valueType%, ByVal Value As Any) As Integer

' Default values for Parameter fields.
' - If return value is -1 then an error has occurred.
' ------------------------------------
Declare Function PEGetNParameterDefaultValues Lib "crpe32.dll" (ByVal printJob%, ByVal parameterFieldName$, ByVal reportName$) As Integer

Declare Function PEGetNthParameterDefaultValue Lib "crpe32.dll" (ByVal printJob%, ByVal parameterFieldName$, ByVal reportName$, ByVal Index%, valueInfo As PEValueInfo) As Integer

Declare Function PESetNthParameterDefaultValue Lib "crpe32.dll" (ByVal printJob%, ByVal parameterFieldName$, ByVal reportName$, ByVal Index%, valueInfo As PEValueInfo) As Integer

Declare Function PEAddParameterDefaultValue Lib "crpe32.dll" (ByVal printJob%, ByVal parameterFieldName$, ByVal reportName$, valueInfo As PEValueInfo) As Integer

Declare Function PEDeleteNthParameterDefaultValue Lib "crpe32.dll" (ByVal printJob%, ByVal parameterFieldName$, ByVal reportName$, ByVal Index%) As Integer

' Min/Max values for Parameter fields.
' ------------------------------------
Declare Function PEGetParameterMinMaxValue Lib "crpe32.dll" (ByVal printJob%, ByVal parameterFieldName$, ByVal reportName$, valueMin As PEValueInfo, valueMax As PEValueInfo) As Integer

Declare Function PESetParameterMinMaxValue Lib "crpe32.dll" (ByVal printJob%, ByVal parameterFieldName$, ByVal reportName$, valueMin As PEValueInfo, valueMax As PEValueInfo) As Integer

' Pick list options in Parameter fields.
Declare Function PEGetNthParameterValueDescription Lib "crpe32.dll" (ByVal printJob As Integer, ByVal parameterFieldName As String, ByVal reportName As String, ByVal Index As Integer, valueDesc As Long, valueDescLength As Integer) As Integer
Declare Function PESetNthParameterValueDescription Lib "crpe32.dll" (ByVal printJob As Integer, ByVal parameterFieldName As String, ByVal reportName As String, ByVal Index As Integer, ByVal valueDesc As String) As Integer

' constants for sortMethod in PEParameterPickListOption struct
Global Const PE_OR_NO_SORT = 0
Global Const PE_OR_ALPHANUMERIC_ASCENDING = 1
Global Const PE_OR_ALPHANUMERIC_DESCENDING = 2
Global Const PE_OR_NUMERIC_ASCENDING = 3
Global Const PE_OR_NUMERIC_DESCENDING = 4

Type PEParameterPickListOption
    StructSize As Integer       ' initialize to PE_SIZEOF_PICK_LIST_OPTION
    showDescOnly As Integer     ' boolean value or PE_UNCHANGED
    sortMethod As Integer       ' enum type const, PE_UNCHANGED for no change
    sortBasedOnDesc As Integer  ' boolean value or PE_UNCHANGED
End Type

Global Const PE_SIZEOF_PICK_LIST_OPTION = (4 * PE_WORD_LEN)

Declare Function PEGetParameterPickListOption Lib "crpe32.dll" (ByVal printJob As Integer, ByVal parameterFieldName As String, ByVal reportName As String, pickListOption As PEParameterPickListOption) As Integer
Declare Function PESetParameterPickListOption Lib "crpe32.dll" (ByVal printJob As Integer, ByVal parameterFieldName As String, ByVal reportName As String, pickListOption As PEParameterPickListOption) As Integer

' Parameter current values
' ------------------------

'parameter field origin
Global Const PE_PO_REPORT = 0
Global Const PE_PO_STOREDPROC = 1
Global Const PE_PO_QUERY = 2

' range info
Global Const PE_RI_INCLUDEUPPERBOUND = 1
Global Const PE_RI_INCLUDELOWERBOUND = 2
Global Const PE_RI_NOUPPERBOUND = 4
Global Const PE_RI_NOLOWERBOUND = 8

Global Const PE_DR_HASRANGE = 0
Global Const PE_DR_HASDISCRETE = 1
Global Const PE_DR_HASDISCRETEANDRANGE = 2

Type PEParameterValueInfo
    StructSize As Integer
    isNullable As Integer               ' Boolean value or PE_UNCHANGED for no change.
    disallowEditing As Integer          ' Boolean value or PE_UNCHANGED for no change.
    allowMultipleValues As Integer      ' Boolean value or PE_UNCHANGED for no change.
    hasDiscreteValues As Integer        ' PE_UNCHANGED for no change.
                                        ' 0 means has ranges, 1 means has discrete values
                                        ' 2 means has discrete and ranged values
    partOfGroup As Integer              ' Boolean value or PE_UNCHANGED for no change.
    groupNum As Integer                 ' a group number or PE_UNCHANGED for no change.
    mutuallyExclusiveGroup As Integer   ' Boolean value or PE_UNCHANGED for no change.
End Type

Global Const PE_SIZEOF_PARAMETER_VALUE_INFO = 8 * PE_WORD_LEN

Declare Function PEGetParameterValueInfo Lib "crpe32.dll" (ByVal printJob%, ByVal parameterFieldName$, ByVal reportName$, valueInfo As PEParameterValueInfo) As Integer

Declare Function PESetParameterValueInfo Lib "crpe32.dll" (ByVal printJob%, ByVal parameterFieldName$, ByVal reportName$, valueInfo As PEParameterValueInfo) As Integer

' If return value is -1 then an error has occurred.
Declare Function PEGetNParameterCurrentValues Lib "crpe32.dll" (ByVal printJob%, ByVal parameterFieldName$, ByVal reportName$) As Integer

Declare Function PEGetNthParameterCurrentValue Lib "crpe32.dll" (ByVal printJob%, ByVal parameterFieldName$, ByVal reportName$, ByVal Index%, currentValue As PEValueInfo) As Integer

Declare Function PEAddParameterCurrentValue Lib "crpe32.dll" (ByVal printJob%, ByVal parameterFieldName$, ByVal reportName$, currentValue As PEValueInfo) As Integer

' If return value is -1 then an error has occurred.
Declare Function PEGetNParameterCurrentRanges Lib "crpe32.dll" (ByVal printJob%, ByVal parameterFieldName$, ByVal reportName$) As Integer

Declare Function PEGetNthParameterCurrentRange Lib "crpe32.dll" (ByVal printJob%, ByVal parameterFieldName$, ByVal reportName$, ByVal Index%, rangeStart As PEValueInfo, rangeEnd As PEValueInfo, ByVal rangeInfo%) As Integer

Declare Function PEAddParameterCurrentRange Lib "crpe32.dll" (ByVal printJob%, ByVal parameterFieldName$, ByVal reportName$, rangeStart As PEValueInfo, rangeEnd As PEValueInfo, ByVal rangeInfo%) As Integer

Declare Function PEGetNthParameterType Lib "crpe32.dll" (ByVal printJob%, ByVal Index%) As Integer 'returns PE_PO_* or -1 if index is invalid.

Declare Function PEClearParameterCurrentValuesAndRanges Lib "crpe32.dll" (ByVal printJob%, ByVal parameterFieldName$, ByVal reportName$) As Integer

' Subreport Functions
' -------------------------------------------

Global Const PE_SUBREPORT_NAME_LEN = 128

' PE_SRI_ONOPENJOB: Reimport the subreport when opening the main report.
' PE_SRI_ONFUNCTIONCALL: Reimport the subreport when the api is called.
Global Const PE_SRI_UNDEFINED = -1
Global Const PE_SRI_ONOPENJOB = 0
Global Const PE_SRI_ONFUNCTIONCALL = 1

Type PESubreportInfo
    StructSize As Integer            ' Initialize to PE_SIZEOF_SUBREPORT_INFO.
    
    'Strings are null-terminated.
    Name As String * PE_SUBREPORT_NAME_LEN

    'number of links
    NLinks As Integer

    ' subreport placement.
    isOnDemand As Integer       ' TRUE if the subreport is on demand subreport.
    external As Integer         ' 1: the subreport is imported; 0: otherwise.
    reimportOption As Integer   ' PE_SRI_ONOPENJOB or PE_SRI_ONFUNCTIONCALL
End Type

Global Const PE_SIZEOF_SUBREPORT_INFO = 4 * PE_WORD_LEN + PE_SUBREPORT_NAME_LEN + 1

Declare Function PEGetSubreportInfo Lib "crpe32.dll" (ByVal printJob%, ByVal subreportHandle As Long, subreportInfo As PESubreportInfo) As Integer

Declare Function PEReimportSubreport Lib "crpe32.dll" (ByVal printJob As Integer, ByVal subreportHandle As Long, linkChanged As Long, reimported As Long) As Integer

' End Subreports


' Controlling sort order and group sort order
' -------------------------------------------

Global Const PE_SF_MAXNAMELEN = 50  ' maximum length of a sort field name

Global Const PE_SF_DESC = 0         ' values for the Direction parameter
Global Const PE_SF_ASC = 1

Declare Function PEGetNSortFields Lib "crpe32.dll" (ByVal printJob%) As Integer

Declare Function PEGetNthSortField Lib "crpe32.dll" (ByVal printJob%, ByVal SortNumber%, nameHandle As Long, nameLength%, Direction%) As Integer

Declare Function PESetNthSortField Lib "crpe32.dll" (ByVal printJob%, ByVal SortNumber%, ByVal SortFieldName$, ByVal Direction%) As Integer

Declare Function PEDeleteNthSortField Lib "crpe32.dll" (ByVal printJob%, ByVal SortFieldN%) As Integer

Declare Function PEGetNGroupSortFields Lib "crpe32.dll" (ByVal printJob%) As Integer

Declare Function PEGetNthGroupSortField Lib "crpe32.dll" (ByVal printJob%, ByVal SortFieldN%, nameHandle As Long, nameLength%, Direction%) As Integer

Declare Function PESetNthGroupSortField Lib "crpe32.dll" (ByVal printJob%, ByVal SortFieldN%, ByVal SortGroupName$, ByVal Direction%) As Integer

Declare Function PEDeleteNthGroupSortField Lib "crpe32.dll" (ByVal printJob%, ByVal SortFieldN%) As Integer

